<resources>
    <string name="actionBarTitle">Iconoir Settings</string>
    <string name="actionBarPackages">Choose application</string>

    <string name="showAllLaunchers">Show All</string>
    <string name="launcherItemIcon">Icon</string>

    <string name="menuAlert">Wallpaper Alert</string>
    <string name="menuAdvanced">Advanced Settings</string>
    <string name="menuAbout">About</string>

    <string name="installed">Installed</string>
    <string name="notInstalled">Available</string>
    <string name="notReleased">Unreleased</string>
    <string name="suggested">Suggested</string>
    <string name="setShortcut">Set Shortcut</string>

    <string name="installIcon">Install this icon</string>
    <string name="suggestedShortcuts">Suggested shortcut for:</string>
    <string name="unreleasedIcon">Not yet released</string>
    <string name="pleaseRate">Please rate Iconoir Settings to help this icon get approved sooner</string>

    <string name="googlePlayPrefix">http://play.google.com/store/apps/details?id=</string>
    <string name="iconoirSettingsPackage">com.iconoir.settings</string>
    <string name="sharedPrefLabel">IconoirSettings</string>

    <string-array name="iconoirPackages">
        <item>com.iconoir.a2</item>
        <item>com.iconoir.b</item>
        <item>com.iconoir.c</item>
        <item>com.iconoir.d</item>
        <item>com.iconoir.e</item>
        <item>com.iconoir.f</item>
        <item>com.iconoir.g</item>
        <item>com.iconoir.h</item>
        <item>com.iconoir.i</item>
        <item>com.iconoir.j</item>
        <item>com.iconoir.k</item>
        <item>com.iconoir.l</item>
        <item>com.iconoir.m</item>
        <item>com.iconoir.n</item>
        <item>com.iconoir.o</item>
        <item>com.iconoir.p</item>
        <item>com.iconoir.q</item>
        <item>com.iconoir.r</item>
        <item>com.iconoir.s</item>
        <item>com.iconoir.t</item>
        <item>com.iconoir.u</item>
        <item>com.iconoir.v</item>
        <item>com.iconoir.w</item>
        <item>com.iconoir.x</item>
        <item>com.iconoir.y</item>
        <item>com.iconoir.z</item>
    </string-array>

    <string-array name="suggestionRanking">
        <item>com.iconoir.g</item>
        <item>com.iconoir.c</item>
        <item>com.iconoir.s</item>
        <item>com.iconoir.m</item>
        <item>com.iconoir.p</item>
        <item>com.iconoir.t</item>
        <item>com.iconoir.h</item>
        <item>com.iconoir.e</item>
        <item>com.iconoir.r</item>
        <item>com.iconoir.a2</item>
        <item>com.iconoir.o</item>
        <item>com.iconoir.n</item>
        <item>com.iconoir.d</item>
        <item>com.iconoir.l</item>
        <item>com.iconoir.w</item>
        <item>com.iconoir.f</item>
        <item>com.iconoir.b</item>
        <item>com.iconoir.i</item>
        <item>com.iconoir.y</item>
        <item>com.iconoir.u</item>
        <item>com.iconoir.j</item>
        <item>com.iconoir.k</item>
        <item>com.iconoir.v</item>
        <item>com.iconoir.q</item>
        <item>com.iconoir.x</item>
        <item>com.iconoir.z</item>
    </string-array>

    <string-array name="validSystemPackages">
        <item>com.google.android.youtube</item>
        <item>com.google.android.googlequicksearchbox</item>
        <item>com.google.android.apps.messaging</item>
        <item>com.android.vending</item>
        <item>com.android.contacts</item>
        <item>com.android.camera</item>
        <item>com.android.camera2</item>
        <item>com.google.android.gm</item>
        <item>com.google.android.dialer</item>
        <item>com.google.android.music</item>
        <item>com.google.android.apps.docs</item>
        <item>com.google.android.apps.maps</item>
        <item>com.opera.browser</item>
        <item>com.android.chrome</item>
        <item>com.google.android.videos</item>
        <item>com.google.android.apps.photos</item>
        <item>com.google.android.calendar</item>
        <item>com.android.settings</item>
        <item>com.android.calculator</item>
        <item>com.android.calculator2</item>
        <item>com.android.email</item>
        <item>com.android.music</item>
        <item>com.google.android.apps.wallpaper</item>
        <item>com.google.android.talk</item>
        <item>com.android.deskclock</item>
        <item>com.android.phone</item>
    </string-array>

    <!-- Example Interface settings -->
    <string name="prefTitle">Advanced Settings</string>

    <string name="prefTitleSetBackground">Set Iconoir Black wallpaper</string>
    <string name="prefDescSetBackground">Better matches your icons</string>
    <string name="prefConfirmSetBackground">Set your wallpaper to Iconoir Black. Can be reversed.</string>

    <string name="prefTitleRestoreBackground">Restore old wallpaper</string>
    <string name="prefDescRestoreBackground">Saved until cache cleared</string>
    <string name="prefConfirmRestoreBackground">Return to your previous wallpaper.</string>

    <string name="errorSetWallpaper">Could not set wallpaper</string>

    <string name="prefTitleAllowHiddenPackages">Show hidden system apps</string>
    <string name="prefDescAllowHiddenPackages">Some may not function correctly</string>

    <string name="aboutText"><b>Iconoir</b>\n(noun\  |\  ˈaɪ koʊ nwar)\nAn elegant interface for all devices.\n\n<i>Version 1.0</i></string>

    <string name="aboutWebsiteValue">https://iconoir.com</string>
    <string name="aboutEmailValue">iconoirdev@gmail.com</string>
    <string name="aboutTwitterValue">iconoirdev</string>
    <string name="aboutInstagramValue">iconoirdev</string>
    <string name="aboutFacebookValue">iconoirdev</string>
    <string name="aboutPlayStoreValue">com.iconoir.settings</string>

    <string name="aboutWebsite">www.iconoir.com</string>
    <string name="aboutEmail">Email</string>
    <string name="aboutTwitter">Twitter</string>
    <string name="aboutInstagram">Instagram</string>
    <string name="aboutFacebook">Facebook</string>
    <string name="aboutPlayStore">Play Store</string>

    <string name="aboutLicenses">Licenses</string>

    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac justo sed lacus vestibulum mollis dapibus non nisi. Mauris a metus suscipit, tempor nibh vitae, sodales urna. Sed malesuada interdum finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in auctor leo. Morbi posuere mauris vitae erat pretium, in lacinia mi malesuada. Donec sodales lacus sapien, eu blandit urna lobortis ut. Aenean sit amet rhoncus lectus. Nunc elit metus, mollis vitae pellentesque sit amet, bibendum eget massa. Nam viverra aliquam egestas. Suspendisse sollicitudin vehicula elit id dictum. Duis quam risus, ornare ut enim nec, pharetra auctor lorem.</string>

    <string name="license1">Sectioned Recyclerview</string>
    <string name="license1Text">
Copyright 2016 Aidan Follestad\n
Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n
http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    </string>

    <string name="license2">Android About Page</string>
    <string name="license2Text">
Copyright 2016 Mehdi Sakout\n
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n
    </string>

    <string name="alertSetWallpaperBefore">Before</string>
    <string name="alertSetWallpaperAfter">After</string>
    <string name="alertSetWallpaperDesc">It appears you are using a newer version of Android.
        We recommend setting your wallpaper to Iconoir Black, which will better match your icons.</string>

    <string name="alertSetWallpaperButton">Set Iconoir Black wallpaper</string>
    <string name="alertSetWallpaperNote">You can easily revert changes in the Advanced Settings panel.</string>
</resources>
